# Smart-Financial-Planner

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  main.py
app/agents/: __init__.py  base.py  curator.py  fact_checker.py  researcher.py  summarizer.py  writer.py
app/agents/tools/: tools.py
app/graph/: builder.py  state.py
app/ui/templates/: base.html  index.html
datasets/: queries.json
docs/: README.md  overview.md  publication.md
prompts/: extract_claims.txt  investability.txt  summarize.txt
tests/: test_end_to_end.py  test_tools.py
tests/eval/: test_evaluation_criteria.py
tests/load/: test_load_baseline.py
tests/smoke/: test_smoke_basic.py
