[project]
name = "smart-financial-planner"
version = "0.1.0"
description = "Agentic Smart Financial Planner"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]